  	query) formats.
  * Updated signature of creation services (createClass, createInstance, createProperty, createConcept, 
  	createConceptScheme, createCollection, spawnNewConceptFromLabel) using CustomFormValue parameter.
  * Fixed RepositoryReadOnlyException and NullPointerException when creating a version dump
  * Bug fixes.

version 2.0
date: 30-10-2017
  * Implemented support for ordered languages in the render.
  * Implemented a more generic API in order to add both 'classic' and custom values.
  * Added the possibility to clone user's roles.
  * Improved the render of search results.
  * Fixed minor bugs.

version 1.0
date: 13-09-2017
After eleven years from its first beta release, the first official stable version of Semantic Turkey is
out there!
There are way too many changes with respect to the original version. 
The most important changes are reported here:
  * Semantic Turkey is no more available as a Firefox extension. It is a service-oriented platform for 
    knowledge acquisition management, oriented to Semantic Web standards.
  * ST now supports collaborative editing of OWL ontologies, SKOS thesauri and RDF datasets in general, thanks
    to a new elaborated user model, supporting authentication and featuring a complex role&capability-based 
    model for checking user authorization on invoking any of the services published by the system
  * a new UI is available as a separate project: VocBench 3 (http://vocbench.uniroma2.it).
  * vocabularies such as SKOSXL are no more considered possible dataset models. There is a new concept of
    lexicalization model. RDFS (with rdfs:label), SKOS (with skos labels) and SKOSXL (with skosxl reified
    labels) are all possible lexicalization models. 
  * this version is not backward compatible: the data folder, though having something in common with the one
    of the previous versions, has simply underwent too many changes 