@@ -1,0 +1,10 @@
+package it.uniroma2.art.semanticturkey.plugin.impls.repositoryimplconfigurer.conf;
+
+public class GraphDBSEConfigurerConfiguration extends AbstractGraphDBConfigurerConfiguration {
+
+	@Override
+	public String getShortName() {
+		return "GraphDB SE (remote only)";
+	}
+
+}
