@@ -7,6 +7,7 @@ date: dd/mm/yyyy
   * Updated signature of creation services (createClass, createInstance, createProperty, createConcept, 
   	createConceptScheme, createCollection, spawnNewConceptFromLabel) using CustomFormValue parameter.
   * Fixed RepositoryReadOnlyException and NullPointerException when creating a version dump
+  * Added the possibility to configure GraphDB SE repositories
   * Bug fixes.
 
 version 2.0
